--- a/presentation.html
+++ b/presentation.html
@@ -50,7 +50,7 @@
     div.csl-indent {
       margin-left: 2em;
     }  </style>
-  <link rel="stylesheet" href="presentation_files/libs/revealjs/dist/theme/quarto-297ee3fe86f5f33d286ac1bd04a6f031.css">
+  <link rel="stylesheet" href="presentation_files/libs/revealjs/dist/theme/quarto-d1a915f9566a14c5a629f4f8af975fd9.css">
   <link href="presentation_files/libs/revealjs/plugin/quarto-line-highlight/line-highlight.css" rel="stylesheet">
   <link href="presentation_files/libs/revealjs/plugin/reveal-menu/menu.css" rel="stylesheet">
   <link href="presentation_files/libs/revealjs/plugin/reveal-menu/quarto-menu.css" rel="stylesheet">
@@ -350,10 +350,12 @@ Table&nbsp;2
 <h2>Pairwise Relationships</h2>
 <div class="columns">
 <div class="column" style="width:40%;">
-<p>GDP per capita is strongly and positively associated with life expectancy, while both indicators display only weak relationships with health expenditure as a share of GDP.</p>
-<p>The distributions along the diagonal highlight that income is highly skewed, whereas life expectancy and health spending are more evenly distributed across countries.</p>
+<ul>
+<li class="fragment"><p>GDP per capita is strongly and positively associated with life expectancy, while both indicators display only weak relationships with health expenditure as a share of GDP.</p></li>
+<li class="fragment"><p>The distributions along the diagonal highlight that income is highly skewed, whereas life expectancy and health spending are more evenly distributed across countries.</p></li>
+</ul>
 </div><div class="column" style="width:60%;">
-<div id="cell-fig-pairwise" class="cell" data-fig-height="5" data-fig-width="5" data-execution_count="4">
+<div id="cell-fig-pairwise" class="cell" data-fig-height="4" data-fig-width="4" data-execution_count="4">
 <div class="cell-output cell-output-display">
 <div id="fig-pairwise" class="quarto-float quarto-figure quarto-figure-center">
 <figure class="quarto-float quarto-float-fig">
@@ -437,33 +439,33 @@ Table&nbsp;3: Comparison of the United States with global and high-income averag
 <style type="text/css">
 </style>
 
-<table id="T_8ba71" class="do-not-create-environment cell caption-top">
+<table id="T_09d22" class="do-not-create-environment cell caption-top">
 <thead>
 <tr class="header">
-<th id="T_8ba71_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
-<th id="T_8ba71_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
-<th id="T_8ba71_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
-<th id="T_8ba71_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
+<th id="T_09d22_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
+<th id="T_09d22_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
+<th id="T_09d22_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
+<th id="T_09d22_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td id="T_8ba71_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
-<td id="T_8ba71_row0_col1" class="data row0 col1">77,860.91</td>
-<td id="T_8ba71_row0_col2" class="data row0 col2">69255.110000</td>
-<td id="T_8ba71_row0_col3" class="data row0 col3">21,076.94</td>
+<td id="T_09d22_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
+<td id="T_09d22_row0_col1" class="data row0 col1">77,860.91</td>
+<td id="T_09d22_row0_col2" class="data row0 col2">69255.110000</td>
+<td id="T_09d22_row0_col3" class="data row0 col3">21,076.94</td>
 </tr>
 <tr class="even">
-<td id="T_8ba71_row1_col0" class="data row1 col0">Life expectancy (years)</td>
-<td id="T_8ba71_row1_col1" class="data row1 col1">77.43</td>
-<td id="T_8ba71_row1_col2" class="data row1 col2">81.280000</td>
-<td id="T_8ba71_row1_col3" class="data row1 col3">73.11</td>
+<td id="T_09d22_row1_col0" class="data row1 col0">Life expectancy (years)</td>
+<td id="T_09d22_row1_col1" class="data row1 col1">77.43</td>
+<td id="T_09d22_row1_col2" class="data row1 col2">81.280000</td>
+<td id="T_09d22_row1_col3" class="data row1 col3">73.11</td>
 </tr>
 <tr class="odd">
-<td id="T_8ba71_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
-<td id="T_8ba71_row2_col1" class="data row2 col1">16.50</td>
-<td id="T_8ba71_row2_col2" class="data row2 col2">8.410000</td>
-<td id="T_8ba71_row2_col3" class="data row2 col3">6.88</td>
+<td id="T_09d22_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
+<td id="T_09d22_row2_col1" class="data row2 col1">16.50</td>
+<td id="T_09d22_row2_col2" class="data row2 col2">8.410000</td>
+<td id="T_09d22_row2_col3" class="data row2 col3">6.88</td>
 </tr>
 </tbody>
 </table>
