--- a/presentation.html
+++ b/presentation.html
@@ -50,7 +50,7 @@
     div.csl-indent {
       margin-left: 2em;
     }  </style>
-  <link rel="stylesheet" href="presentation_files/libs/revealjs/dist/theme/quarto-546958bf4fc82ffbc0499bd265874d3b.css">
+  <link rel="stylesheet" href="presentation_files/libs/revealjs/dist/theme/quarto-b0d5a20e5f992d166408b5648b995782.css">
   <link href="presentation_files/libs/revealjs/plugin/quarto-line-highlight/line-highlight.css" rel="stylesheet">
   <link href="presentation_files/libs/revealjs/plugin/reveal-menu/menu.css" rel="stylesheet">
   <link href="presentation_files/libs/revealjs/plugin/reveal-menu/quarto-menu.css" rel="stylesheet">
@@ -185,9 +185,7 @@ Laura Zang
 <section id="data-overview" class="slide level2">
 <h2>Data Overview</h2>
 <p>We analyze three core indicators:<br>
-- <strong>GDP per Capita (US$)</strong><br>
-- <strong>Life Expectancy (years)</strong><br>
-- <strong>Healthcare Expenditure (% of GDP)</strong></p>
+- GDP per Capita (US$) - Life Expectancy (years) - Healthcare Expenditure (% of GDP)</p>
 <div class="cell" data-execution_count="2">
 <div id="tbl-summary-stats" class="cell quarto-float quarto-figure quarto-figure-center" data-execution_count="2">
 <figure class="quarto-float quarto-float-tbl">
@@ -195,7 +193,7 @@ Laura Zang
 Table&nbsp;1
 </figcaption>
 <div aria-describedby="tbl-summary-stats-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="9">
+<div class="cell-output cell-output-display" data-execution_count="16">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -291,7 +289,7 @@ Table&nbsp;1
 Table&nbsp;2
 </figcaption>
 <div aria-describedby="tbl-correlations-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="10">
+<div class="cell-output cell-output-display" data-execution_count="17">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -355,7 +353,7 @@ Table&nbsp;2
 <li class="fragment"><p>The distributions along the diagonal highlight that income is highly skewed, whereas life expectancy and health spending are more evenly distributed across countries.</p></li>
 </ul>
 </div><div class="column" style="width:60%;">
-<div id="cell-fig-pairwise" class="cell" data-fig-height="4" data-fig-width="4" data-execution_count="4">
+<div id="cell-fig-pairwise" class="cell" data-fig-height="3.5" data-fig-width="3.5" data-execution_count="4">
 <div class="cell-output cell-output-display">
 <div id="fig-pairwise" class="quarto-float quarto-figure quarto-figure-center">
 <figure class="quarto-float quarto-float-fig">
@@ -443,37 +441,37 @@ Figure&nbsp;3: Clusters of countries based on health expenditure (% of GDP) and 
 Table&nbsp;3: Comparison of the United States with global and high-income averages. Source: World Bank WDI (2023).
 </figcaption>
 <div aria-describedby="tbl-usa-comparison-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="14">
+<div class="cell-output cell-output-display" data-execution_count="21">
 <style type="text/css">
 </style>
 
-<table id="T_85492" class="do-not-create-environment cell caption-top">
+<table id="T_9f197" class="do-not-create-environment cell caption-top">
 <thead>
 <tr class="header">
-<th id="T_85492_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
-<th id="T_85492_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
-<th id="T_85492_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
-<th id="T_85492_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
+<th id="T_9f197_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
+<th id="T_9f197_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
+<th id="T_9f197_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
+<th id="T_9f197_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td id="T_85492_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
-<td id="T_85492_row0_col1" class="data row0 col1">77,860.91</td>
-<td id="T_85492_row0_col2" class="data row0 col2">69255.110000</td>
-<td id="T_85492_row0_col3" class="data row0 col3">21,076.94</td>
+<td id="T_9f197_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
+<td id="T_9f197_row0_col1" class="data row0 col1">77,860.91</td>
+<td id="T_9f197_row0_col2" class="data row0 col2">69255.110000</td>
+<td id="T_9f197_row0_col3" class="data row0 col3">21,076.94</td>
 </tr>
 <tr class="even">
-<td id="T_85492_row1_col0" class="data row1 col0">Life expectancy (years)</td>
-<td id="T_85492_row1_col1" class="data row1 col1">77.43</td>
-<td id="T_85492_row1_col2" class="data row1 col2">81.280000</td>
-<td id="T_85492_row1_col3" class="data row1 col3">73.11</td>
+<td id="T_9f197_row1_col0" class="data row1 col0">Life expectancy (years)</td>
+<td id="T_9f197_row1_col1" class="data row1 col1">77.43</td>
+<td id="T_9f197_row1_col2" class="data row1 col2">81.280000</td>
+<td id="T_9f197_row1_col3" class="data row1 col3">73.11</td>
 </tr>
 <tr class="odd">
-<td id="T_85492_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
-<td id="T_85492_row2_col1" class="data row2 col1">16.50</td>
-<td id="T_85492_row2_col2" class="data row2 col2">8.410000</td>
-<td id="T_85492_row2_col3" class="data row2 col3">6.88</td>
+<td id="T_9f197_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
+<td id="T_9f197_row2_col1" class="data row2 col1">16.50</td>
+<td id="T_9f197_row2_col2" class="data row2 col2">8.410000</td>
+<td id="T_9f197_row2_col3" class="data row2 col3">6.88</td>
 </tr>
 </tbody>
 </table>
