--- a/presentation.html
+++ b/presentation.html
@@ -193,7 +193,7 @@ Laura Zang
 Table&nbsp;1
 </figcaption>
 <div aria-describedby="tbl-summary-stats-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="23">
+<div class="cell-output cell-output-display" data-execution_count="30">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -289,7 +289,7 @@ Table&nbsp;1
 Table&nbsp;2
 </figcaption>
 <div aria-describedby="tbl-correlations-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="24">
+<div class="cell-output cell-output-display" data-execution_count="31">
 <div>
 <style scoped="">
     .dataframe tbody tr th:only-of-type {
@@ -353,7 +353,7 @@ Table&nbsp;2
 <li class="fragment"><p>The distributions along the diagonal highlight that income is highly skewed, whereas life expectancy and health spending are more evenly distributed across countries.</p></li>
 </ul>
 </div><div class="column" style="width:60%;">
-<div id="cell-fig-pairwise" class="cell" data-fig-height="3.5" data-fig-width="3.5" data-execution_count="4">
+<div id="cell-fig-pairwise" class="cell" data-fig-height="3" data-fig-width="3" data-execution_count="4">
 <div class="cell-output cell-output-display">
 <div id="fig-pairwise" class="quarto-float quarto-figure quarto-figure-center">
 <figure class="quarto-float quarto-float-fig">
@@ -372,13 +372,13 @@ Figure&nbsp;1: Pairwise relationships among GDP per capita, life expectancy, and
 <section id="gdp-vs.-life-expectancy" class="slide level2">
 <h2>GDP vs.&nbsp;Life Expectancy</h2>
 <div class="columns">
-<div class="column" style="width:40%;">
+<div class="column" style="width:50%;">
 <ul>
 <li class="fragment"><p>This graph shows an upward relationship between GDP per capita and life expectancy. Wealthier nations tend to have longer lifespans, though the relationship flattens for very high-income countries.</p></li>
 <li class="fragment"><p>This pattern directly reflects findings from McKinsey Global Institute’s “Pixels of Progress” report (2022), which notes that “an additional dollar of GDP per capita ‘buys’ more life expectancy at lower levels of income: the slope of the curve gets flatter as GDP per capita grows”.</p></li>
 <li class="fragment"><p>Improvements in life expectancy are most dramatic in low- and middle-income economies where new income enables access to basic healthcare, sanitation, and nutrition. Once these needs are met, further increases in income yield smaller health gains, and improvements depend on other factors.</p></li>
 </ul>
-</div><div class="column" style="width:60%;">
+</div><div class="column" style="width:50%;">
 <div id="cell-fig-gdp-life" class="cell" data-execution_count="5">
 <div class="cell-output cell-output-display">
 <div id="fig-gdp-life" class="quarto-float quarto-figure quarto-figure-center">
@@ -441,37 +441,37 @@ Figure&nbsp;3: Clusters of countries based on health expenditure (% of GDP) and 
 Table&nbsp;3: Comparison of the United States with global and high-income averages. Source: World Bank WDI (2023).
 </figcaption>
 <div aria-describedby="tbl-usa-comparison-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<div class="cell-output cell-output-display" data-execution_count="28">
+<div class="cell-output cell-output-display" data-execution_count="35">
 <style type="text/css">
 </style>
 
-<table id="T_b4db7" class="do-not-create-environment cell caption-top">
+<table id="T_60231" class="do-not-create-environment cell caption-top">
 <thead>
 <tr class="header">
-<th id="T_b4db7_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
-<th id="T_b4db7_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
-<th id="T_b4db7_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
-<th id="T_b4db7_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
+<th id="T_60231_level0_col0" class="col_heading level0 col0" data-quarto-table-cell-role="th">Indicator</th>
+<th id="T_60231_level0_col1" class="col_heading level0 col1" data-quarto-table-cell-role="th">United States</th>
+<th id="T_60231_level0_col2" class="col_heading level0 col2" data-quarto-table-cell-role="th">High-income avg</th>
+<th id="T_60231_level0_col3" class="col_heading level0 col3" data-quarto-table-cell-role="th">Global avg</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td id="T_b4db7_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
-<td id="T_b4db7_row0_col1" class="data row0 col1">77,860.91</td>
-<td id="T_b4db7_row0_col2" class="data row0 col2">69255.110000</td>
-<td id="T_b4db7_row0_col3" class="data row0 col3">21,076.94</td>
+<td id="T_60231_row0_col0" class="data row0 col0">GDP per capita (US$)</td>
+<td id="T_60231_row0_col1" class="data row0 col1">77,860.91</td>
+<td id="T_60231_row0_col2" class="data row0 col2">69255.110000</td>
+<td id="T_60231_row0_col3" class="data row0 col3">21,076.94</td>
 </tr>
 <tr class="even">
-<td id="T_b4db7_row1_col0" class="data row1 col0">Life expectancy (years)</td>
-<td id="T_b4db7_row1_col1" class="data row1 col1">77.43</td>
-<td id="T_b4db7_row1_col2" class="data row1 col2">81.280000</td>
-<td id="T_b4db7_row1_col3" class="data row1 col3">73.11</td>
+<td id="T_60231_row1_col0" class="data row1 col0">Life expectancy (years)</td>
+<td id="T_60231_row1_col1" class="data row1 col1">77.43</td>
+<td id="T_60231_row1_col2" class="data row1 col2">81.280000</td>
+<td id="T_60231_row1_col3" class="data row1 col3">73.11</td>
 </tr>
 <tr class="odd">
-<td id="T_b4db7_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
-<td id="T_b4db7_row2_col1" class="data row2 col1">16.50</td>
-<td id="T_b4db7_row2_col2" class="data row2 col2">8.410000</td>
-<td id="T_b4db7_row2_col3" class="data row2 col3">6.88</td>
+<td id="T_60231_row2_col0" class="data row2 col0">Health expenditure (% of GDP)</td>
+<td id="T_60231_row2_col1" class="data row2 col1">16.50</td>
+<td id="T_60231_row2_col2" class="data row2 col2">8.410000</td>
+<td id="T_60231_row2_col3" class="data row2 col3">6.88</td>
 </tr>
 </tbody>
 </table>
@@ -498,7 +498,7 @@ Table&nbsp;3: Comparison of the United States with global and high-income averag
 <li class="fragment"><strong>The U.S. paradox:</strong>
 <ul>
 <li class="fragment">The United States exemplifies inefficiency — spending 16.5% of GDP on healthcare yet ranking below peers in life expectancy.</li>
-<li class="fragment">Confirms findings from McKinsey (2023) and Our World in Data (2024) that system efficiency, equity, and innovation are now the main drivers of health gains, not wealth alone. <span class="citation" data-cites="mckinsey_pixels_progress_ch3">(<a href="#/references" role="doc-biblioref" onclick="">Institute 2022</a>)</span> [ourworldindata_life_expectancy_vs_health_expenditure] [ourworldindata_us_life_expectancy]</li>
+<li class="fragment">Confirms findings from McKinsey (2023) and Our World in Data (2024) that system efficiency, equity, and innovation are now the main drivers of health gains, not wealth alone. <span class="citation" data-cites="mckinsey_pixels_progress_ch3">(<a href="#/references" role="doc-biblioref" onclick="">Institute 2022</a>)</span> <span class="citation" data-cites="ourworldindata_life_expectancy_vs_health_expenditure">(<a href="#/references" role="doc-biblioref" onclick="">Our World in Data 2024</a>)</span> <span class="citation" data-cites="ourworldindata_us_life_expectancy">(<a href="#/references" role="doc-biblioref" onclick="">Our World in Data 2020</a>)</span></li>
 </ul></li>
 <li class="fragment"><em>Economic growth enables better health, but only when paired with efficient, equitable, and innovative healthcare systems.</em></li>
 </ul>
@@ -508,6 +508,12 @@ Table&nbsp;3: Comparison of the United States with global and high-income averag
 <div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" role="list">
 <div id="ref-mckinsey_pixels_progress_ch3" class="csl-entry" role="listitem">
 Institute, McKinsey Global. 2022. <span>“The Relationship Between Income and Health.”</span> <a href="https://www.mckinsey.com/mgi/our-research/pixels-of-progress-chapter-3" class="uri">https://www.mckinsey.com/mgi/our-research/pixels-of-progress-chapter-3</a>. <a href="https://www.mckinsey.com/mgi/our-research/pixels-of-progress-chapter-3">https://www.mckinsey.com/mgi/our-research/pixels-of-progress-chapter-3</a>.
+</div>
+<div id="ref-ourworldindata_us_life_expectancy" class="csl-entry" role="listitem">
+Our World in Data. 2020. <span>“Why Is Life Expectancy in the US Lower Than in Other Rich Countries?”</span> <a href="https://ourworldindata.org/us-life-expectancy-low#:~:text=The%20unequal%20development%20over%20recent,US%20will%20continue%20this%20year.">https://ourworldindata.org/us-life-expectancy-low#:~:text=The%20unequal%20development%20over%20recent,US%20will%20continue%20this%20year.</a>
+</div>
+<div id="ref-ourworldindata_life_expectancy_vs_health_expenditure" class="csl-entry" role="listitem">
+———. 2024. <span>“Life Expectancy Vs Health Expenditure.”</span> <a href="https://ourworldindata.org/grapher/life-expectancy-vs-health-expenditure" class="uri">https://ourworldindata.org/grapher/life-expectancy-vs-health-expenditure</a>. <a href="https://ourworldindata.org/grapher/life-expectancy-vs-health-expenditure">https://ourworldindata.org/grapher/life-expectancy-vs-health-expenditure</a>.
 </div>
 </div>
 
